--- a/slider.css
+++ b/slider.css
@@ -1,57 +1,54 @@
-body {
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0; /* Remove default margin */
-}
+    body {
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0; /* Remove default margin */
+    }
 
-.container {
-    background-color: red;
-    display: flex;
-    flex-direction: rows;
-    align-items: center;
-    gap: 50px;
-}
+    .container {
+        background-color: red;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 50px;
+    }
 
-.top {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-}
+    .top {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
 
-.arrowRight {
-    height: 100px;
-    cursor: pointer;
-}
+    .arrowRight {
+        height: 100px;
+        cursor: pointer;
+    }
 
-.arrowLeft {
-    height: 100px;
-    cursor: pointer;
-    transform: rotate(180deg);
-}
+    .arrowLeft {
+        height: 100px;
+        cursor: pointer;
+        transform: rotate(180deg);
+    }
 
-.frame {
-    width: 800px;
-    height: 500px;
-    overflow: hidden;
-}
+    .frame {
+        width: 800px;
+        height: 500px;
+        overflow: hidden;
+    }
 
-.img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    .slider{
+        display: flex;
+    }
 
-.bottom {
-    display: flex;
-    gap: 30px;
-}
+   .img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-.button {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    border: 1px solid black;
-    button position:  ;
-}
+    .bottom {
+        display: flex;
+        gap: 30px;
+        justify-content: center; /* Center the buttons horizontally */
+    }
