--- a/quiz.css
+++ b/quiz.css
@@ -68,3 +68,11 @@ body{
     padding: 10px 20px;
     border: none;
 }
+
+.question {
+    font-size: 30px; /* Adjust the font size as needed */
+}
+
+.answer label {
+    font-size: 24px; /* Adjust the font size as needed */
+}
