--- a/quiz.css
+++ b/quiz.css
@@ -44,7 +44,6 @@ body{
 }
 
 .result{
-    display: none;
     padding: 50px;
     text-align: center;
 }
@@ -75,4 +74,8 @@ body{
 
 .answer label {
     font-size: 24px; /* Adjust the font size as needed */
+}
+
+.hidden {
+    display: none;
 }
