--- a/quiz.css
+++ b/quiz.css
@@ -1,5 +1,5 @@
 body{
-    background-color: darkblue;
+    background-color: purple;
     display: flex;
  align-items: center;
  justify-content: center;
@@ -9,7 +9,7 @@ body{
 .container{
     width: 800px; 
     height: 500px;
-    background-color: whitesmoke;
+    background-color: white;
     position: relative;
 }
 
@@ -27,9 +27,11 @@ body{
 }
 
 .answer{
+    display: flex;
     font-size: 30px;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
     color: black;
+    flex-direction: column;
 }
 
 .submit{
@@ -37,7 +39,7 @@ body{
     color: white;
     border: none;
     width: 100%;
-    height: 50px;
+    height: 70px;
     cursor: pointer;
     position: absolute;
     bottom: 0;
@@ -60,6 +62,15 @@ body{
     color: red;
 }
 
+.play{
+    color: white;
+    background-color: purple;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+
+}
+
 .result{
     color: white;
     background-color: blue;
@@ -69,11 +80,11 @@ body{
 }
 
 .question {
-    font-size: 30px; /* Adjust the font size as needed */
+    font-size: 30px; 
 }
 
 .answer label {
-    font-size: 24px; /* Adjust the font size as needed */
+    font-size: 24px;
 }
 
 .hidden {
